Fix the uneven spacing below cheat sheets & checklists

--- a/css-src/cheatsheet-checklist.css
+++ b/css-src/cheatsheet-checklist.css
@@ -41,7 +41,9 @@
 
 .cheat-list ul,
 .cheat-list ol,
-.cheat-list p {
+.cheat-list p,
+.cheat-list code,
+.cheat-list pre {
   margin-bottom: 0;
 }
 
